--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
+    "rootDir": "src",
     "noEmit": false,
     "target": "ES6",
     "module": "ES6",
